=== master

* Fix typecasting of lazy columns when using lazy_attributes plugin in model where dataset selects from subquery (jeremyevans)

* Add :before_preconnect Database option, for configuring extensions loaded via :preconnect_extensions (MarcPer, jeremyevans) (#1786)

* Change Dataset#columns! to use a LIMIT 0 query instead of a LIMIT 1 query (jeremyevans)

* Add sql_log_normalizer extension for normalizing logged SQL, helpful for analytics and sensitive data (jeremyevans)

* Add support for range_merge, multirange, and unnest, and PGMultiRange#op to pg_range_ops extension (jeremyevans)

* Add pg_multirange extension with support for PostgreSQL 14+ multirange types (jeremyevans)

=== 5.49.0 (2021-10-01)

* Switch block_given? usage to defined?(yield) (jeremyevans)

* Support table aliases for JOIN USING columns on PostgreSQL 14+ (jeremyevans)

* Support calling PostgreSQL procedures without arguments (jeremyevans)

* Support hstore subscripts in pg_hstore_ops on PostgreSQL 14+, for updating only part of an hstore value (jeremyevans)

* Support JSONB subscripts in pg_json_ops on PostgreSQL 14+, for updating only part of a JSONB value (jeremyevans)

* Support SQL::Expression#sequel_ast_transform for custom AST transforms on arbitrary expressions (jeremyevans)

* Add Database#create_trigger :replace option on PostgreSQL 14+ for CREATE OR REPLACE TRIGGER (jeremyevans)

* Make auto_validations plugin automatically setup no_null_byte validations (jeremyevans)

* Add Model#validates_no_null_byte to validation_helpers plugin (jeremyevans)

=== 5.48.0 (2021-09-01)

* Make the unused_associations plugin association reflection tracking work correctly when combining coverage runs (jeremyevans)

* Add Database#like_without_collate on MSSQL, to avoid using COLLATE on LIKE arguments, which can significantly improve performance (jeremyevans)

* Add Model::Errors#full_message private method for easiest i18n support for errors with multiple attributes (jeremyevans) (#1779)
